# openagentd

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yaml  install.ps1  install.sh  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: core.yml  publish-homebrew.yml  release-docker.yml  release.yml  version-check.yml  web.yml
.opencode/commands/: release.md
app/: alembic.ini  server.py
app/agent/: checkpointer.py  drift.py  errors.py  loader.py  multimodal.py  permission.py  sandbox.py  sandbox_config.py  state.py  tool_id_resolver.py
app/api/: app.py  deps.py
app/cli/: __init__.py  firstrun.py  main.py  paths.py  pids.py  seed.py  server.py  ui.py
app/core/: __init__.py  config.py  db.py  exception_handlers.py  jsonl_writer.py  logging_config.py  metrics.py  middlewares.py  otel.py  otel_retention.py  paths.py  version.py  wiki_seed.py
app/migrations/: env.py
app/models/: __init__.py  chat.py
app/scheduler/: cron.py  models.py  scheduler.py  schemas.py
app/services/: _tool_state.py  agent_fs.py  agent_service.py  chat_service.py  dream.py  dream_scheduler.py  memory_stream_store.py  observability_service.py  quote_service.py  stream_envelope.py  team_manager.py  title_service.py  wiki.py
documents/docs/: architecture.md  cli.md  comparison.md  configuration.md  guidelines.md  index.md  install.md  logging.md  observability.md  title-generation.md  troubleshooting.md
documents/styling-specs/: applications.md  colors.md  imagery.md  index.md  interaction.md  layout.md  logo.md  motion.md  typography.md
manual/: AGENTS.md  dream.py  health.py  image_edit_smoketest.py  image_tool_smoketest.py  inspect_prompt.py  note.py  otel_inspect.py  scheduler.py  summarization_improvements_test.py  summarization_max_tokens_test.py  summarization_test.py  team_chat.py  team_history.py  team_sessions.py  team_sse.py  team_timeline.py  tool_result_offload_test.py  video_smoketest.py  wiki.py
manual/try_providers/: _common.py  _tools_common.py  try_bedrock.py  try_copilot.py  try_deepseek.py  try_geminicli.py  try_googlegenai.py  try_openai.py  try_openai_chat_completions_tools.py  try_openai_responses_tools.py  try_vertexai.py  try_zai.py
seed/: README.md  dream.md  mcp.json  multimodal.yaml  summarization.md  title_generation.md
seed/agents/: consultant.md  executor.md  explorer.md  openagentd.md
tests/: conftest.py  test_server.py
tests/agent/: test_agent_identity.py  test_agent_loop.py  test_agent_run.py  (+11 more)
web/: bunfig.toml  index.html  package.json  tsconfig.app.json  tsconfig.test.json  vite.config.ts
(+466 files in other folders)
